<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".slide.TestDoneActivity">

    <TextView
        android:text="Kết Quả"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/colorAccent"
        android:textColor="#f71c1c"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:id="@+id/textView" />


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/caudung"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvTrue"
            android:layout_weight="1" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/causai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvFalse"
            android:layout_weight="1" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/cauchuatraloi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.79" />

        <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvNotAns"
            android:layout_weight="1" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/tongdiem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvTotalPoint"
            android:layout_weight="1" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="wrap_content">

        <Button
            android:layout_marginLeft="12dp"
            android:background="@color/colorPrimary"
            android:text="@string/choilai"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnAgain"
           />

        <Button
            android:layout_marginLeft="20dp"
            android:background="@color/colorPrimary"
            android:text="@string/thoat"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnExit"
          />

        <Button
            android:layout_marginLeft="20dp"
            android:background="@color/colorPrimary"
            android:text="@string/luudiem"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnSaveScore"
          />
    </LinearLayout>



</LinearLayout>