<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".score.ScoreFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/tv_tieude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/danhsachdiem"
        android:textColor="@color/red"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_below="@id/tv_tieude"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="15sp"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/name"/>

        <TextView
            android:textSize="15sp"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sbd"/>
        <TextView
            android:textSize="15sp"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/diem"/>

    </LinearLayout>

    <ListView
        android:id="@+id/lv_Listview"
        android:layout_width="match_parent"
        android:layout_height="395dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"></ListView>

</RelativeLayout>