<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginLeft="150dp"
        android:textSize="20sp"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/luudiem"/>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/name" />

        <EditText

            android:layout_marginLeft="20dp"
            android:id="@+id/ed_name"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/name" />

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_room"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/sbd" />

        <EditText
            android:layout_marginLeft="20dp"
            android:id="@+id/ed_room"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/sbd" />

    </LinearLayout>
    <TextView
        android:layout_marginTop="20dp"
        android:layout_marginLeft="150dp"
        android:textStyle="bold"
        android:textColor="@color/red"
        android:textSize="15sp"
        android:id="@+id/tvscore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"/>


</LinearLayout>